--- a/index.html
+++ b/index.html
@@ -20,17 +20,22 @@
     </header>
 
     <section>
-      <div class="product-card">
+      <div class="box-main">
         <h1>Descubra agora mesmo o seu Índice de Massa Corporal.</h1>
         <p>
           Calcule seu IMC e descubra a dieta ideal para o seu dia a dia. Aprenda
           a ter hábitos saudáveis com as nossas dicas de exercício e melhore a
           sua saúde.
         </p>
-        <p id="information"><a href="#">SAIBA MAIS</a></p>
+        <p id="button-information"><a href="#">SAIBA MAIS</a></p>
       </div>
 
-      <div></div>
+      <div class="box-imc">
+        <h2>Calculadora do Índice de Massa Corporal</h2>
+        <h2>Peso (kg)</h2>
+        
+
+      </div>
     </section>
   </body>
 </html>
