--- a/index.html
+++ b/index.html
@@ -6,36 +6,33 @@
     <title>IMC Saudável</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header>
+      <p id="logo">LOGO</p>
       <nav>
-        <p id="logo">LOGO</p>
         <ul>
-          <li><a href="#">Dicas Exercícios</a></li>
+          <li><a href="#">Dicas de exercícios</a></li>
           <li><a href="#">Ingestão Água</a></li>
           <li><a href="#">Contato</a></li>
         </ul>
       </nav>
     </header>
 
-    <section>
-      <div class="box-main">
-        <h1>Descubra agora mesmo o seu Índice de Massa Corporal.</h1>
-        <p>
-          Calcule seu IMC e descubra a dieta ideal para o seu dia a dia. Aprenda
-          a ter hábitos saudáveis com as nossas dicas de exercício e melhore a
-          sua saúde.
-        </p>
-        <p id="button-information"><a href="#">SAIBA MAIS</a></p>
-      </div>
-
-      <div class="box-imc">
-        <h2>Calculadora do Índice de Massa Corporal</h2>
-        <h2>Peso (kg)</h2>
-        
-
-      </div>
-    </section>
+    <main>
+      <article>
+        <div class="conteudo-imc">
+          <h1>Descubra agora mesmo o seu Índice de Massa Corporal</h1>
+          <p>
+            Calcule seu IMC e descubra a dieta ideal para o seu dia a dia.
+            <br />Aprenda a ter hábitos saudáveis com as nossas dicas de
+            exercício e melhore a sua saúde.
+          </p>
+          <p><a href="SAIBA MAIS">SAIBA MAIS</a></p>
+        </div>
+        <div class="calculadora-box">
+          <div class="calculadora-imc"></div>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
