--- a/index.html
+++ b/index.html
@@ -29,18 +29,21 @@
           </p>
           <p><a href="#">SAIBA MAIS</a></p>
         </div>
-        <div class="box-imc">
-          <div class="calculadora-imc">
-            <p>Calculadora do Índice de Massa Corporal</p>
+        <div class="introducao-2">
+          <div class="box-imc">
+            <div class="calculadora-imc">
+              <p>Calculadora IMC</p>
 
-            <label for="peso">Peso (kg):</label>
-            <input type="number" id="peso" name="peso" />
+              <label for="peso">Peso (kg):</label>
+              <input type="number" id="peso" name="peso" />
 
-            <label for="altura">Altura (m):</label>
-            <input type="number" id="altura" name="altura" />
+              <label for="altura">Altura (m):</label>
+              <input type="number" id="altura" name="altura" />
 
-            <input type="submit" id="button" value="CALCULAR" />
+              <input type="submit" id="button" value="CALCULAR" />
+            </div>
           </div>
+
           <table>
             <tr>
               <th>IMC</th>
