--- a/index.html
+++ b/index.html
@@ -76,6 +76,27 @@
           </table>
         </div>
       </article>
+
+      <article>
+        <div class="introducao-agua">
+          <h1>Você bebe água regularmente?</h1>
+          <p>
+            Nosso corpo necessita de cuidados específicos, e um dos elementos
+            mais importantes é a água.
+          </p>
+          <p><a href="#">SAIBA MAIS</a></p>
+        </div>
+        <div class="introducao-agua-2">
+          <div class="box-agua">
+            <div class="calculadora-agua">
+              <p>Calculadora Água</p>
+              <label for="peso">Peso (kg):</label>
+              <input type="number" id="peso" name="peso" />
+              <input type="submit" id="button-agua" value="CALCULAR" />
+            </div>
+          </div>
+        </div>
+      </article>
     </main>
   </body>
 </html>
