--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
     <header>
       <nav>
-        <p>LOGO</p>
+        <p><a class="logo" href="index.html">LOGO</a></p>
         <ul>
-          <li><a href="#">Dicas de exercícios</a></li>
-          <li><a href="#">Ingestão Água</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="dicas.html">Dicas de exercícios</a></li>
+          <li><a href="#agua">Ingestão Água</a></li>
+          <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <article>
-        <div class="introducao">
+        <div class="introducao-1">
           <h1>Descubra agora mesmo o seu Índice de Massa Corporal</h1>
           <p>
             Calcule seu IMC e descubra a dieta ideal para o seu dia a dia.
@@ -28,14 +28,14 @@
             melhore a sua saúde.
           </p>
           <p><a href="#">SAIBA MAIS</a></p>
-        </div>
-        <div class="introducao-2">
+        </div> 
+         <div class="introducao-1-1"> 
           <div class="box-imc">
             <div class="calculadora-imc">
               <p>Calculadora IMC</p>
 
-              <label for="peso">Peso (kg):</label>
-              <input type="number" id="peso" name="peso" />
+              <label for="peso-imc">Peso (kg):</label>
+              <input type="number" id="peso-imc" name="peso" />
 
               <label for="altura">Altura (m):</label>
               <input type="number" id="altura" name="altura" />
@@ -76,9 +76,11 @@
           </table>
         </div>
       </article>
+    </main>
 
+    <main>
       <article>
-        <div class="introducao-agua">
+        <div id="agua" class="introducao-2">
           <h1>Você bebe água regularmente?</h1>
           <p>
             Nosso corpo necessita de cuidados específicos, e um dos elementos
@@ -86,17 +88,37 @@
           </p>
           <p><a href="#">SAIBA MAIS</a></p>
         </div>
-        <div class="introducao-agua-2">
+          <div class="introducao-2-2">
           <div class="box-agua">
             <div class="calculadora-agua">
               <p>Calculadora Água</p>
-              <label for="peso">Peso (kg):</label>
-              <input type="number" id="peso" name="peso" />
+              <label for="peso-agua">Peso (kg):</label>
+              <input type="number" id="peso-agua" name="peso" />
               <input type="submit" id="button-agua" value="CALCULAR" />
             </div>
           </div>
-        </div>
+        </div> 
       </article>
     </main>
+
+    <article id="contato" class="contato">
+      <h3>Contato</h3>
+      <div class="contato-1">
+        <h4>Como Podemos Melhorar?</h4>
+        <p>Compartilhe sua experiência, deixe agora mesmo o seu feedback.</p>
+        <br />
+        <form class="form-contato" action="#">
+          <label for="nome">Nome:</label><br />
+          <input type="text" id="nome" name="nome" /><br />
+          <label for="email">Email:</label><br />
+          <input type="text" id="email" name="email" /><br /><br />
+          <label for="email">Feedback:</label><br />
+          <input type="text" id="feedback" name="feedback" /><br /><br />
+          <input id="submit-enviar" type="submit" value="Enviar" />
+        </form>
+      </div>
+    </article>
+
+    <footer><p>© 2024 Saúdavel24h. Todos os direitos reservados.</p></footer>
   </body>
 </html>
