--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <p><a class="logo" href="index.html">LOGO</a></p>
+        <p><a class="logo" href="index.html">IMC Saudável</a></p>
         <ul>
           <li><a href="dicas.html">Dicas de exercícios</a></li>
           <li><a href="#agua">Ingestão Água</a></li>
@@ -28,8 +28,12 @@
             melhore a sua saúde.
           </p>
           <p><a href="#">SAIBA MAIS</a></p>
-        </div> 
-         <div class="introducao-1-1"> 
+        </div>
+
+        <div class="img-balance">
+          <img src="./weight-scale-svgrepo-com.svg" alt="" />
+        </div>
+        <div class="introducao-1-1">
           <div class="box-imc">
             <div class="calculadora-imc">
               <p>Calculadora IMC</p>
@@ -88,7 +92,7 @@
           </p>
           <p><a href="#">SAIBA MAIS</a></p>
         </div>
-          <div class="introducao-2-2">
+        <div class="introducao-2-2">
           <div class="box-agua">
             <div class="calculadora-agua">
               <p>Calculadora Água</p>
@@ -97,7 +101,7 @@
               <input type="submit" id="button-agua" value="CALCULAR" />
             </div>
           </div>
-        </div> 
+        </div>
       </article>
     </main>
 
